fixed more spacing and resizing of window problems

--- a/html_css_content/global.css
+++ b/html_css_content/global.css
@@ -14,6 +14,8 @@ header {
 
 form {
     display: flex;
+    position: relative;
+    top: 130px;
     background-color: #1d2b36;
     padding: 50px;
     border-radius: 25px;
